# time_series_training

./: .gitignore  README.md  autoencoders.ipynb  predictors.ipynb  pyproject.toml  src.py  timeseries.ipynb
src/: inference.py  misc.py  models.py  plots.py  train.py  utils.py
src/models/: autoencoders.py  predictors.py
