[project]
name = "time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
]
